# speed-sketch

./: .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  app.py  app_frame.py  build_mac.zsh  build_windows.bat  button_bar.py  chromatic.config.json  eslint.config.js  image_viewer.py  main.py  main_menu.py  package-lock.json  package.json  playwright.config.ts  radio_selector.py  requirements.txt  setup.py  svelte.config.js  test.py  vite.config.ts  vitest-setup-client.ts
.github/workflows/: main.yml
.storybook/: main.ts  preview.ts  vitest.setup.ts
e2e/: accessibility.test.ts  main.test.ts  session-end-page.ts  session-page.ts  session.test.ts  settings-dialog.ts
e2e/pages/: main-menu-page.ts  session-end-page.ts  session-page.ts  settings-dialog.ts
src/: app.css  app.html  app.py  button_bar.py  icon.icns  image_viewer.py  main_menu.py  test.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src/lib/: Colors.stories.svelte  app-settings.svelte.ts  audio.ts  drawing-session.svelte.test.ts  drawing-session.svelte.ts  globals.svelte.ts  motion.svelte.ts  persistent-store.svelte.ts  session-settings.svelte.ts  types.svelte.ts  utils.svelte.ts  wakelock.svelte.ts
src/lib/atoms/: Card.stories.svelte  Checkbox.stories.svelte  Checkbox.svelte  DurationField.stories.svelte  DurationField.svelte  RadioButtons.stories.svelte  Select.stories.svelte  Select.svelte  Slider.stories.svelte  Slider.svelte  StatusAlert.stories.svelte  Tooltip.stories.svelte
src/lib/components/: AlertDialog.svelte  Background.svelte  Button.svelte  ButtonGroup.svelte  Card.stories.svelte  Card.svelte  Checkbox.svelte  ControlsMenu.svelte  DurationField.svelte  FolderInput.svelte  Gridlines.svelte  ImageGrid.svelte  ImageGrid.svelte.test.ts  ImagesInput.svelte  RadioButtons.svelte  RadioButtons.svelte.test.ts  Select.svelte  SessionMenu.svelte  SettingsButton.svelte  Slider.svelte  StatusAlert.stories.svelte  StatusAlert.svelte  StatusAlert.svelte.test.ts  Timer.stories.svelte  Timer.svelte  Timer.svelte.test.ts  Toolbar.stories.svelte  Toolbar.svelte  Toolbar.svelte.test.ts  Tooltip.stories.svelte  Tooltip.svelte  components.svelte.test.ts
src/lib/design-tokens/: Colors.stories.svelte
src/lib/store/: app-settings.svelte.test.ts  app-settings.svelte.ts  persistent-store.svelte.ts  session-settings.svelte.test.ts  (+3 more)
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  FolderInput.svelte  ImageGrid.svelte  MainMenuScreen.stories.svelte  MainMenuScreen.svelte  MainMenuUI.stories.svelte  MainMenuUI.svelte  MainMenuUI.svelte.test.ts  RadioButtons.svelte  SessionMenu.svelte  page.svelte.test.ts
src/stories/: AlertDialog.stories.svelte  AlertDialog.svelte  Button.stories.svelte  Colors.stories.svelte  Colors.svelte  EndScreenUI.stories.svelte  MainMenuUI.stories.svelte  SessionMenu.stories.svelte  SessionUI.stories.svelte  SessionUI.svelte  SettingsDialog.stories.svelte  SettingsDialog.svelte  Toolbar.stories.svelte  Toolbar.svelte
static/: site.webmanifest
(+59 files in other folders)
