[package]
name = "SpeedSketch"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "speed_sketch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.2", features = ["protocol-asset"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tauri-plugin-dialog = "2.3.3"
tauri-plugin-keepawake = "0.1.1"
tauri-plugin-opener = "2.5.0"
tauri-plugin-prevent-default = "3.0.1"
tauri-plugin-store = "2.4.0"
tokio = "1.47.1"
walkdir = "2.5.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
